@@ -13,11 +13,16 @@
  */
 package io.trino.plugin.deltalake;
 
+import com.google.common.collect.HashMultiset;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.ImmutableMultiset;
 import com.google.common.collect.ImmutableSet;
+import com.google.common.collect.Multiset;
 import io.airlift.units.Duration;
+import io.opentelemetry.sdk.trace.data.SpanData;
 import io.trino.filesystem.hdfs.HdfsFileSystemFactory;
+import io.trino.filesystem.tracing.TracingFileSystemFactory;
 import io.trino.plugin.deltalake.transactionlog.AddFileEntry;
 import io.trino.plugin.deltalake.transactionlog.CommitInfoEntry;
 import io.trino.plugin.deltalake.transactionlog.MetadataEntry;
@@ -29,7 +34,9 @@ import io.trino.plugin.deltalake.transactionlog.checkpoint.CheckpointSchemaManag
 import io.trino.plugin.deltalake.transactionlog.statistics.DeltaLakeFileStatistics;
 import io.trino.plugin.hive.FileFormatDataSourceStats;
 import io.trino.plugin.hive.parquet.ParquetReaderConfig;
+import io.trino.plugin.hive.parquet.ParquetWriterConfig;
 import io.trino.spi.connector.ColumnMetadata;
+import io.trino.spi.connector.ConnectorSession;
 import io.trino.spi.connector.SchemaTableName;
 import io.trino.spi.predicate.TupleDomain;
 import io.trino.spi.type.DateTimeEncoding;
@@ -37,9 +44,10 @@ import io.trino.spi.type.Decimals;
 import io.trino.spi.type.IntegerType;
 import io.trino.spi.type.TypeManager;
 import io.trino.testing.TestingConnectorContext;
-import org.apache.hadoop.fs.Path;
-import org.testng.annotations.DataProvider;
-import org.testng.annotations.Test;
+import io.trino.testing.TestingConnectorSession;
+import io.trino.testing.TestingTelemetry;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.parallel.Execution;
 
 import java.io.File;
 import java.io.IOException;
@@ -56,26 +64,30 @@ import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import static com.google.common.collect.ImmutableList.toImmutableList;
 import static com.google.common.collect.MoreCollectors.onlyElement;
 import static com.google.common.collect.Sets.union;
 import static io.airlift.slice.Slices.utf8Slice;
 import static io.airlift.testing.Assertions.assertEqualsIgnoreOrder;
+import static io.trino.filesystem.tracing.FileSystemAttributes.FILE_LOCATION;
 import static io.trino.plugin.deltalake.DeltaLakeColumnType.REGULAR;
+import static io.trino.plugin.deltalake.DeltaTestingConnectorSession.SESSION;
 import static io.trino.plugin.deltalake.transactionlog.DeltaLakeSchemaSupport.extractColumnMetadata;
 import static io.trino.plugin.deltalake.transactionlog.TransactionLogParser.LAST_CHECKPOINT_FILENAME;
 import static io.trino.plugin.deltalake.transactionlog.TransactionLogUtil.TRANSACTION_LOG_DIRECTORY;
 import static io.trino.plugin.hive.HiveTestUtils.HDFS_ENVIRONMENT;
+import static io.trino.plugin.hive.HiveTestUtils.HDFS_FILE_SYSTEM_STATS;
 import static io.trino.spi.type.TimeZoneKey.UTC_KEY;
-import static io.trino.testing.TestingConnectorSession.SESSION;
-import static io.trino.testing.assertions.Assert.assertEquals;
+import static io.trino.testing.MultisetAssertions.assertMultisetsEqual;
 import static io.trino.type.InternalTypeManager.TESTING_TYPE_MANAGER;
 import static java.lang.String.format;
 import static java.time.ZoneOffset.UTC;
+import static java.util.Objects.requireNonNull;
+import static java.util.stream.Collectors.toCollection;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.testng.Assert.assertFalse;
-import static org.testng.Assert.assertTrue;
+import static org.junit.jupiter.api.parallel.ExecutionMode.SAME_THREAD;
 
-@Test(singleThreaded = true)
+@Execution(SAME_THREAD) // e.g. TrackingFileSystemFactory is shared mutable state
 public class TestTransactionLogAccess
 {
     private static final Set<String> EXPECTED_ADD_FILE_PATHS = ImmutableSet.of(
@@ -100,30 +112,30 @@ public class TestTransactionLogAccess
             new RemoveFileEntry("age=42/part-00000-6aed618a-2beb-4edd-8466-653e67a9b380.c000.snappy.parquet", 1579190155406L, false),
             new RemoveFileEntry("age=42/part-00000-b82d8859-84a0-4f05-872c-206b07dd54f0.c000.snappy.parquet", 1579190163932L, false));
 
+    private final TestingTelemetry testingTelemetry = TestingTelemetry.create("transaction-log-access");
+    private final TracingFileSystemFactory tracingFileSystemFactory = new TracingFileSystemFactory(testingTelemetry.getTracer(), new HdfsFileSystemFactory(HDFS_ENVIRONMENT, HDFS_FILE_SYSTEM_STATS));
+
     private TransactionLogAccess transactionLogAccess;
     private TableSnapshot tableSnapshot;
 
-    private AccessTrackingFileSystemFactory accessTrackingFileSystemFactory;
-
-    private void setupTransactionLogAccess(String tableName)
+    private void setupTransactionLogAccessFromResources(String tableName, String resourcePath)
             throws Exception
     {
-        setupTransactionLogAccess(tableName, new Path(getClass().getClassLoader().getResource("databricks/" + tableName).toURI()));
+        setupTransactionLogAccess(tableName, getClass().getClassLoader().getResource(resourcePath).toString());
     }
 
-    private void setupTransactionLogAccess(String tableName, Path tableLocation)
+    private void setupTransactionLogAccess(String tableName, String tableLocation)
             throws IOException
     {
         setupTransactionLogAccess(tableName, tableLocation, new DeltaLakeConfig());
     }
 
-    private void setupTransactionLogAccess(String tableName, Path tableLocation, DeltaLakeConfig deltaLakeConfig)
+    private void setupTransactionLogAccess(String tableName, String tableLocation, DeltaLakeConfig deltaLakeConfig)
             throws IOException
     {
         TestingConnectorContext context = new TestingConnectorContext();
         TypeManager typeManager = context.getTypeManager();
 
-        accessTrackingFileSystemFactory = new AccessTrackingFileSystemFactory(new HdfsFileSystemFactory(HDFS_ENVIRONMENT));
         FileFormatDataSourceStats fileFormatDataSourceStats = new FileFormatDataSourceStats();
 
         transactionLogAccess = new TransactionLogAccess(
@@ -131,14 +143,16 @@ public class TestTransactionLogAccess
                 new CheckpointSchemaManager(typeManager),
                 deltaLakeConfig,
                 fileFormatDataSourceStats,
-                accessTrackingFileSystemFactory,
+                tracingFileSystemFactory,
                 new ParquetReaderConfig());
 
         DeltaLakeTableHandle tableHandle = new DeltaLakeTableHandle(
                 "schema",
                 tableName,
+                true,
                 "location",
-                Optional.empty(), // ignored
+                new MetadataEntry("id", "test", "description", null, "", ImmutableList.of(), ImmutableMap.of(), 0),
+                new ProtocolEntry(1, 2, Optional.empty(), Optional.empty()),
                 TupleDomain.none(),
                 TupleDomain.none(),
                 Optional.empty(),
@@ -146,55 +160,70 @@ public class TestTransactionLogAccess
                 Optional.empty(),
                 Optional.empty(),
                 Optional.empty(),
-                0,
-                false);
+                0);
 
-        tableSnapshot = transactionLogAccess.loadSnapshot(tableHandle.getSchemaTableName(), tableLocation, SESSION);
+        tableSnapshot = transactionLogAccess.loadSnapshot(SESSION, tableHandle.getSchemaTableName(), tableLocation);
     }
 
     @Test
     public void testGetMetadataEntry()
             throws Exception
     {
-        setupTransactionLogAccess("person");
+        setupTransactionLogAccessFromResources("person", "databricks73/person");
 
-        MetadataEntry metadataEntry = transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION).get();
+        MetadataEntry metadataEntry = transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION);
 
-        assertEquals(metadataEntry.getCreatedTime(), 1579190100722L);
-        assertEquals(metadataEntry.getId(), "b6aeffad-da73-4dde-b68e-937e468b1fdf");
+        assertThat(metadataEntry.getCreatedTime()).isEqualTo(1579190100722L);
+        assertThat(metadataEntry.getId()).isEqualTo("b6aeffad-da73-4dde-b68e-937e468b1fdf");
         assertThat(metadataEntry.getOriginalPartitionColumns()).containsOnly("age");
-        assertThat(metadataEntry.getCanonicalPartitionColumns()).containsOnly("age");
+        assertThat(metadataEntry.getLowercasePartitionColumns()).containsOnly("age");
 
         MetadataEntry.Format format = metadataEntry.getFormat();
-        assertEquals(format.getOptions().keySet().size(), 0);
-        assertEquals(format.getProvider(), "parquet");
+        assertThat(format.getOptions().keySet().size()).isEqualTo(0);
+        assertThat(format.getProvider()).isEqualTo("parquet");
 
-        assertEquals(tableSnapshot.getCachedMetadata(), Optional.of(metadataEntry));
+        assertThat(tableSnapshot.getCachedMetadata()).isEqualTo(Optional.of(metadataEntry));
     }
 
     @Test
     public void testGetMetadataEntryUppercase()
             throws Exception
     {
-        setupTransactionLogAccess("uppercase_columns");
-        MetadataEntry metadataEntry = transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION).get();
+        setupTransactionLogAccessFromResources("uppercase_columns", "databricks73/uppercase_columns");
+        MetadataEntry metadataEntry = transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION);
         assertThat(metadataEntry.getOriginalPartitionColumns()).containsOnly("ALA");
-        assertThat(metadataEntry.getCanonicalPartitionColumns()).containsOnly("ala");
-        assertEquals(tableSnapshot.getCachedMetadata(), Optional.of(metadataEntry));
+        assertThat(metadataEntry.getLowercasePartitionColumns()).containsOnly("ala");
+        assertThat(tableSnapshot.getCachedMetadata()).isEqualTo(Optional.of(metadataEntry));
     }
 
     @Test
     public void testGetActiveAddEntries()
             throws Exception
     {
-        setupTransactionLogAccess("person");
+        setupTransactionLogAccessFromResources("person", "databricks73/person");
 
-        List<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
+        MetadataEntry metadataEntry = transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION);
+        ProtocolEntry protocolEntry = transactionLogAccess.getProtocolEntry(SESSION, tableSnapshot);
+        List<AddFileEntry> addFileEntries;
+        try (Stream<AddFileEntry> addFileEntriesStream = transactionLogAccess.getActiveFiles(tableSnapshot, metadataEntry, protocolEntry, SESSION)) {
+            addFileEntries = addFileEntriesStream.collect(toImmutableList());
+        }
         Set<String> paths = addFileEntries
                 .stream()
                 .map(AddFileEntry::getPath)
                 .collect(Collectors.toSet());
-        assertEquals(paths, EXPECTED_ADD_FILE_PATHS);
+        assertThat(paths).isEqualTo(EXPECTED_ADD_FILE_PATHS);
+
+        ConnectorSession checkpointFilteringSession = TestingConnectorSession.builder()
+                .setPropertyMetadata(new DeltaLakeSessionProperties(
+                        new DeltaLakeConfig().setCheckpointFilteringEnabled(true),
+                        new ParquetReaderConfig(),
+                        new ParquetWriterConfig())
+                        .getSessionProperties())
+                .build();
+        try (Stream<AddFileEntry> checkpointFilteredAddFileEntriesStream = transactionLogAccess.getActiveFiles(tableSnapshot, metadataEntry, protocolEntry, checkpointFilteringSession)) {
+            assertThat(checkpointFilteredAddFileEntriesStream.collect(toImmutableList())).isEqualTo(addFileEntries);
+        }
 
         AddFileEntry addFileEntry = addFileEntries
                 .stream()
@@ -208,29 +237,32 @@ public class TestTransactionLogAccess
                 .hasSize(1)
                 .containsEntry("age", Optional.of("42"));
 
-        assertEquals(addFileEntry.getSize(), 2687);
-        assertEquals(addFileEntry.getModificationTime(), 1579190188000L);
-        assertFalse(addFileEntry.isDataChange());
+        assertThat(addFileEntry.getSize()).isEqualTo(2687);
+        assertThat(addFileEntry.getModificationTime()).isEqualTo(1579190188000L);
+        assertThat(addFileEntry.isDataChange()).isFalse();
     }
 
     @Test
     public void testAddFileEntryUppercase()
             throws Exception
     {
-        setupTransactionLogAccess("uppercase_columns");
+        setupTransactionLogAccessFromResources("uppercase_columns", "databricks73/uppercase_columns");
 
-        List<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
-        AddFileEntry addFileEntry = addFileEntries
-                .stream()
-                .filter(entry -> entry.getPath().equals("ALA=1/part-00000-20a863e0-890d-4776-8825-f9dccc8973ba.c000.snappy.parquet"))
-                .collect(onlyElement());
+        MetadataEntry metadataEntry = transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION);
+        ProtocolEntry protocolEntry = transactionLogAccess.getProtocolEntry(SESSION, tableSnapshot);
 
-        assertThat(addFileEntry.getPartitionValues())
-                .hasSize(1)
-                .containsEntry("ALA", "1");
-        assertThat(addFileEntry.getCanonicalPartitionValues())
-                .hasSize(1)
-                .containsEntry("ala", Optional.of("1"));
+        try (Stream<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, metadataEntry, protocolEntry, SESSION)) {
+            AddFileEntry addFileEntry = addFileEntries
+                    .filter(entry -> entry.getPath().equals("ALA=1/part-00000-20a863e0-890d-4776-8825-f9dccc8973ba.c000.snappy.parquet"))
+                    .collect(onlyElement());
+
+            assertThat(addFileEntry.getPartitionValues())
+                    .hasSize(1)
+                    .containsEntry("ALA", "1");
+            assertThat(addFileEntry.getCanonicalPartitionValues())
+                    .hasSize(1)
+                    .containsEntry("ALA", Optional.of("1"));
+        }
     }
 
     @Test
@@ -240,23 +272,30 @@ public class TestTransactionLogAccess
         // Test data contains two add entries which should be pruned:
         // - Added in the parquet checkpoint but removed in a JSON commit
         // - Added in a JSON commit and removed in a later JSON commit
-        setupTransactionLogAccess("person_test_pruning");
-        List<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
-        Set<String> paths = addFileEntries
-                .stream()
-                .map(AddFileEntry::getPath)
-                .collect(Collectors.toSet());
+        setupTransactionLogAccessFromResources("person_test_pruning", "databricks73/person_test_pruning");
+        MetadataEntry metadataEntry = transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION);
+        ProtocolEntry protocolEntry = transactionLogAccess.getProtocolEntry(SESSION, tableSnapshot);
+        try (Stream<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, metadataEntry, protocolEntry, SESSION)) {
+            Set<String> paths = addFileEntries
+                    .map(AddFileEntry::getPath)
+                    .collect(Collectors.toSet());
 
-        assertFalse(paths.contains("age=25/part-00001-aceaf062-1cd1-45cb-8f83-277ffebe995c.c000.snappy.parquet"));
-        assertFalse(paths.contains("age=29/part-00000-3794c463-cb0c-4beb-8d07-7cc1e3b5920f.c000.snappy.parquet"));
+            assertThat(paths.contains("age=25/part-00001-aceaf062-1cd1-45cb-8f83-277ffebe995c.c000.snappy.parquet")).isFalse();
+            assertThat(paths.contains("age=29/part-00000-3794c463-cb0c-4beb-8d07-7cc1e3b5920f.c000.snappy.parquet")).isFalse();
+        }
     }
 
     @Test
     public void testAddEntryOverrides()
             throws Exception
     {
-        setupTransactionLogAccess("person_test_pruning");
-        List<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
+        setupTransactionLogAccessFromResources("person_test_pruning", "databricks73/person_test_pruning");
+        MetadataEntry metadataEntry = transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION);
+        ProtocolEntry protocolEntry = transactionLogAccess.getProtocolEntry(SESSION, tableSnapshot);
+        List<AddFileEntry> addFileEntries;
+        try (Stream<AddFileEntry> addFileEntryStream = transactionLogAccess.getActiveFiles(tableSnapshot, metadataEntry, protocolEntry, SESSION)) {
+            addFileEntries = addFileEntryStream.collect(toImmutableList());
+        }
 
         // Test data contains two entries which are added multiple times, the most up to date one should be the only one in the active list
         List<String> overwrittenPaths = ImmutableList.of(
@@ -264,13 +303,11 @@ public class TestTransactionLogAccess
                 "age=28/part-00000-40dd1707-1d42-4328-a59a-21f5c945fe60.c000.snappy.parquet");
 
         for (String path : overwrittenPaths) {
-            List<AddFileEntry> activeEntries = addFileEntries
-                    .stream()
+            List<AddFileEntry> activeEntries = addFileEntries.stream()
                     .filter(addFileEntry -> addFileEntry.getPath().equals(path))
-                    .collect(Collectors.toList());
-
-            assertEquals(activeEntries.size(), 1);
-            assertEquals(activeEntries.get(0).getModificationTime(), 9999999L);
+                    .toList();
+            assertThat(activeEntries.size()).isEqualTo(1);
+            assertThat(activeEntries.get(0).getModificationTime()).isEqualTo(9999999L);
         }
     }
 
@@ -278,28 +315,29 @@ public class TestTransactionLogAccess
     public void testAddRemoveAdd()
             throws Exception
     {
-        setupTransactionLogAccess("person_test_pruning");
-        List<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
+        setupTransactionLogAccessFromResources("person_test_pruning", "databricks73/person_test_pruning");
+        MetadataEntry metadataEntry = transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION);
+        ProtocolEntry protocolEntry = transactionLogAccess.getProtocolEntry(SESSION, tableSnapshot);
+        try (Stream<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, metadataEntry, protocolEntry, SESSION)) {
+            // Test data contains an entry added by the parquet checkpoint, removed by a JSON action, and then added back by a later JSON action
+            List<AddFileEntry> activeEntries = addFileEntries
+                    .filter(addFileEntry -> addFileEntry.getPath().equals("age=30/part-00002-5800be2e-2373-47d8-8b86-776a8ea9d69f.c000.snappy.parquet"))
+                    .toList();
 
-        // Test data contains an entry added by the parquet checkpoint, removed by a JSON action, and then added back by a later JSON action
-        List<AddFileEntry> activeEntries = addFileEntries
-                .stream()
-                .filter(addFileEntry -> addFileEntry.getPath().equals("age=30/part-00002-5800be2e-2373-47d8-8b86-776a8ea9d69f.c000.snappy.parquet"))
-                .collect(Collectors.toList());
-
-        assertEquals(activeEntries.size(), 1);
-        assertEquals(activeEntries.get(0).getModificationTime(), 9999999L);
+            assertThat(activeEntries.size()).isEqualTo(1);
+            assertThat(activeEntries.get(0).getModificationTime()).isEqualTo(9999999L);
+        }
     }
 
     @Test
     public void testGetRemoveEntries()
             throws Exception
     {
-        setupTransactionLogAccess("person");
+        setupTransactionLogAccessFromResources("person", "databricks73/person");
 
         try (Stream<RemoveFileEntry> removeEntries = transactionLogAccess.getRemoveEntries(tableSnapshot, SESSION)) {
             Set<RemoveFileEntry> removedEntries = removeEntries.collect(Collectors.toSet());
-            assertEquals(removedEntries, EXPECTED_REMOVE_ENTRIES);
+            assertThat(removedEntries).isEqualTo(EXPECTED_REMOVE_ENTRIES);
         }
     }
 
@@ -307,93 +345,115 @@ public class TestTransactionLogAccess
     public void testGetCommitInfoEntries()
             throws Exception
     {
-        setupTransactionLogAccess("person");
+        setupTransactionLogAccessFromResources("person", "databricks73/person");
         try (Stream<CommitInfoEntry> commitInfoEntries = transactionLogAccess.getCommitInfoEntries(tableSnapshot, SESSION)) {
             Set<CommitInfoEntry> entrySet = commitInfoEntries.collect(Collectors.toSet());
-            assertEquals(
-                    entrySet,
-                    ImmutableSet.of(
-                            new CommitInfoEntry(11, 1579190200860L, "671960514434781", "michal.slizak@starburstdata.com", "WRITE",
-                                    ImmutableMap.of("mode", "Append", "partitionBy", "[\"age\"]"), null, new CommitInfoEntry.Notebook("3040849856940931"),
-                                    "0116-154224-guppy476", 10L, "WriteSerializable", Optional.of(true)),
-                            new CommitInfoEntry(12, 1579190206644L, "671960514434781", "michal.slizak@starburstdata.com", "WRITE",
-                                    ImmutableMap.of("mode", "Append", "partitionBy", "[\"age\"]"), null, new CommitInfoEntry.Notebook("3040849856940931"),
-                                    "0116-154224-guppy476", 11L, "WriteSerializable", Optional.of(true)),
-                            new CommitInfoEntry(13, 1579190210571L, "671960514434781", "michal.slizak@starburstdata.com", "WRITE",
-                                    ImmutableMap.of("mode", "Append", "partitionBy", "[\"age\"]"), null, new CommitInfoEntry.Notebook("3040849856940931"),
-                                    "0116-154224-guppy476", 12L, "WriteSerializable", Optional.of(true))));
+            assertThat(entrySet).isEqualTo(ImmutableSet.of(
+                    new CommitInfoEntry(11, 1579190200860L, "671960514434781", "michal.slizak@starburstdata.com", "WRITE",
+                            ImmutableMap.of("mode", "Append", "partitionBy", "[\"age\"]"), null, new CommitInfoEntry.Notebook("3040849856940931"),
+                            "0116-154224-guppy476", 10L, "WriteSerializable", Optional.of(true)),
+                    new CommitInfoEntry(12, 1579190206644L, "671960514434781", "michal.slizak@starburstdata.com", "WRITE",
+                            ImmutableMap.of("mode", "Append", "partitionBy", "[\"age\"]"), null, new CommitInfoEntry.Notebook("3040849856940931"),
+                            "0116-154224-guppy476", 11L, "WriteSerializable", Optional.of(true)),
+                    new CommitInfoEntry(13, 1579190210571L, "671960514434781", "michal.slizak@starburstdata.com", "WRITE",
+                            ImmutableMap.of("mode", "Append", "partitionBy", "[\"age\"]"), null, new CommitInfoEntry.Notebook("3040849856940931"),
+                            "0116-154224-guppy476", 12L, "WriteSerializable", Optional.of(true))));
         }
     }
 
-    // Broader tests which validate common attributes across the wider data set
-    @DataProvider
-    public Object[][] tableNames()
-    {
-        return new Object[][] {
-                {"person"},
-                {"person_without_last_checkpoint"},
-                {"person_without_old_jsons"},
-                {"person_without_checkpoints"}
-        };
-    }
-
-    @Test(dataProvider = "tableNames")
-    public void testAllGetMetadataEntry(String tableName)
+    @Test
+    public void testAllGetMetadataEntry()
             throws Exception
     {
-        setupTransactionLogAccess(tableName);
+        testAllGetMetadataEntry("person", "databricks73/person");
+        testAllGetMetadataEntry("person_without_last_checkpoint", "databricks73/person_without_last_checkpoint");
+        testAllGetMetadataEntry("person_without_old_jsons", "databricks73/person_without_old_jsons");
+        testAllGetMetadataEntry("person_without_checkpoints", "databricks73/person_without_checkpoints");
+    }
+
+    private void testAllGetMetadataEntry(String tableName, String resourcePath)
+            throws Exception
+    {
+        setupTransactionLogAccessFromResources(tableName, resourcePath);
 
         transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION);
-        MetadataEntry metadataEntry = transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION).get();
+        MetadataEntry metadataEntry = transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION);
 
         assertThat(metadataEntry.getOriginalPartitionColumns()).containsOnly("age");
 
         MetadataEntry.Format format = metadataEntry.getFormat();
-        assertEquals(format.getOptions().keySet().size(), 0);
-        assertEquals(format.getProvider(), "parquet");
+        assertThat(format.getOptions().keySet().size()).isEqualTo(0);
+        assertThat(format.getProvider()).isEqualTo("parquet");
     }
 
-    @Test(dataProvider = "tableNames")
-    public void testAllGetActiveAddEntries(String tableName)
+    @Test
+    public void testAllGetActiveAddEntries()
             throws Exception
     {
-        setupTransactionLogAccess(tableName);
-
-        List<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
-        Set<String> paths = addFileEntries
-                .stream()
-                .map(AddFileEntry::getPath)
-                .collect(Collectors.toSet());
-
-        assertEquals(paths, EXPECTED_ADD_FILE_PATHS);
+        testAllGetActiveAddEntries("person", "databricks73/person");
+        testAllGetActiveAddEntries("person_without_last_checkpoint", "databricks73/person_without_last_checkpoint");
+        testAllGetActiveAddEntries("person_without_old_jsons", "databricks73/person_without_old_jsons");
+        testAllGetActiveAddEntries("person_without_checkpoints", "databricks73/person_without_checkpoints");
     }
 
-    @Test(dataProvider = "tableNames")
-    public void testAllGetRemoveEntries(String tableName)
+    private void testAllGetActiveAddEntries(String tableName, String resourcePath)
             throws Exception
     {
-        setupTransactionLogAccess(tableName);
+        setupTransactionLogAccessFromResources(tableName, resourcePath);
+        MetadataEntry metadataEntry = transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION);
+        ProtocolEntry protocolEntry = transactionLogAccess.getProtocolEntry(SESSION, tableSnapshot);
+        try (Stream<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, metadataEntry, protocolEntry, SESSION)) {
+            Set<String> paths = addFileEntries
+                    .map(AddFileEntry::getPath)
+                    .collect(Collectors.toSet());
+
+            assertThat(paths).isEqualTo(EXPECTED_ADD_FILE_PATHS);
+        }
+    }
+
+    @Test
+    public void testAllGetRemoveEntries()
+            throws Exception
+    {
+        testAllGetRemoveEntries("person", "databricks73/person");
+        testAllGetRemoveEntries("person_without_last_checkpoint", "databricks73/person_without_last_checkpoint");
+        testAllGetRemoveEntries("person_without_old_jsons", "databricks73/person_without_old_jsons");
+        testAllGetRemoveEntries("person_without_checkpoints", "databricks73/person_without_checkpoints");
+    }
+
+    private void testAllGetRemoveEntries(String tableName, String resourcePath)
+            throws Exception
+    {
+        setupTransactionLogAccessFromResources(tableName, resourcePath);
 
         try (Stream<RemoveFileEntry> removeEntries = transactionLogAccess.getRemoveEntries(tableSnapshot, SESSION)) {
             Set<String> removedPaths = removeEntries.map(RemoveFileEntry::getPath).collect(Collectors.toSet());
             Set<String> expectedPaths = EXPECTED_REMOVE_ENTRIES.stream().map(RemoveFileEntry::getPath).collect(Collectors.toSet());
 
-            assertEquals(removedPaths, expectedPaths);
+            assertThat(removedPaths).isEqualTo(expectedPaths);
         }
     }
 
-    @Test(dataProvider = "tableNames")
-    public void testAllGetProtocolEntries(String tableName)
+    @Test
+    public void testAllGetProtocolEntries()
             throws Exception
     {
-        setupTransactionLogAccess(tableName);
+        testAllGetProtocolEntries("person", "databricks73/person");
+        testAllGetProtocolEntries("person_without_last_checkpoint", "databricks73/person_without_last_checkpoint");
+        testAllGetProtocolEntries("person_without_old_jsons", "databricks73/person_without_old_jsons");
+        testAllGetProtocolEntries("person_without_checkpoints", "databricks73/person_without_checkpoints");
+    }
+
+    private void testAllGetProtocolEntries(String tableName, String resourcePath)
+            throws Exception
+    {
+        setupTransactionLogAccessFromResources(tableName, resourcePath);
 
         try (Stream<ProtocolEntry> protocolEntryStream = transactionLogAccess.getProtocolEntries(tableSnapshot, SESSION)) {
-            List<ProtocolEntry> protocolEntries = protocolEntryStream.collect(Collectors.toList());
-
-            assertEquals(protocolEntries.size(), 1);
-            assertEquals(protocolEntries.get(0).getMinReaderVersion(), 1);
-            assertEquals(protocolEntries.get(0).getMinWriterVersion(), 2);
+            List<ProtocolEntry> protocolEntries = protocolEntryStream.toList();
+            assertThat(protocolEntries.size()).isEqualTo(1);
+            assertThat(protocolEntries.get(0).getMinReaderVersion()).isEqualTo(1);
+            assertThat(protocolEntries.get(0).getMinWriterVersion()).isEqualTo(2);
         }
     }
 
@@ -402,13 +462,12 @@ public class TestTransactionLogAccess
             throws Exception
     {
         String tableName = "person";
-        // setupTransactionLogAccess(tableName, new Path(getClass().getClassLoader().getResource("databricks/" + tableName).toURI()));
         File tempDir = Files.createTempDirectory(null).toFile();
         File tableDir = new File(tempDir, tableName);
         File transactionLogDir = new File(tableDir, TRANSACTION_LOG_DIRECTORY);
         transactionLogDir.mkdirs();
 
-        java.nio.file.Path resourceDir = java.nio.file.Paths.get(getClass().getClassLoader().getResource("databricks/person/_delta_log").toURI());
+        java.nio.file.Path resourceDir = java.nio.file.Paths.get(getClass().getClassLoader().getResource("databricks73/person/_delta_log").toURI());
         for (int i = 0; i < 12; i++) {
             String extension = i == 10 ? ".checkpoint.parquet" : ".json";
             String fileName = format("%020d%s", i, extension);
@@ -416,13 +475,13 @@ public class TestTransactionLogAccess
         }
         Files.copy(resourceDir.resolve(LAST_CHECKPOINT_FILENAME), new File(transactionLogDir, LAST_CHECKPOINT_FILENAME).toPath());
 
-        setupTransactionLogAccess(tableName, new Path(tableDir.toURI()));
-        assertEquals(tableSnapshot.getVersion(), 11L);
+        setupTransactionLogAccess(tableName, tableDir.toURI().toString());
+        assertThat(tableSnapshot.getVersion()).isEqualTo(11L);
 
         String lastTransactionName = format("%020d.json", 12);
         Files.copy(resourceDir.resolve(lastTransactionName), new File(transactionLogDir, lastTransactionName).toPath());
-        TableSnapshot updatedSnapshot = transactionLogAccess.loadSnapshot(new SchemaTableName("schema", tableName), new Path(tableDir.toURI()), SESSION);
-        assertEquals(updatedSnapshot.getVersion(), 12);
+        TableSnapshot updatedSnapshot = transactionLogAccess.loadSnapshot(SESSION, new SchemaTableName("schema", tableName), tableDir.toURI().toString());
+        assertThat(updatedSnapshot.getVersion()).isEqualTo(12);
     }
 
     @Test
@@ -435,36 +494,37 @@ public class TestTransactionLogAccess
         File transactionLogDir = new File(tableDir, TRANSACTION_LOG_DIRECTORY);
         transactionLogDir.mkdirs();
 
-        File resourceDir = new File(getClass().getClassLoader().getResource("databricks/person/_delta_log").toURI());
+        File resourceDir = new File(getClass().getClassLoader().getResource("databricks73/person/_delta_log").toURI());
         copyTransactionLogEntry(0, 7, resourceDir, transactionLogDir);
-        setupTransactionLogAccess(tableName, new Path(tableDir.toURI()));
+        setupTransactionLogAccess(tableName, tableDir.toURI().toString());
+        MetadataEntry metadataEntry = transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION);
+        ProtocolEntry protocolEntry = transactionLogAccess.getProtocolEntry(SESSION, tableSnapshot);
+        try (Stream<AddFileEntry> activeDataFiles = transactionLogAccess.getActiveFiles(tableSnapshot, metadataEntry, protocolEntry, SESSION)) {
+            Set<String> dataFiles = ImmutableSet.of(
+                    "age=42/part-00000-b82d8859-84a0-4f05-872c-206b07dd54f0.c000.snappy.parquet",
+                    "age=30/part-00000-72a56c23-01ba-483a-9062-dd0accc86599.c000.snappy.parquet",
+                    "age=25/part-00000-609e34b1-5466-4dbc-a780-2708166e7adb.c000.snappy.parquet",
+                    "age=30/part-00000-7e43a3c3-ea26-4ae7-8eac-8f60cbb4df03.c000.snappy.parquet",
+                    "age=21/part-00000-3d546786-bedc-407f-b9f7-e97aa12cce0f.c000.snappy.parquet",
+                    "age=21/part-00001-290f0f26-19cf-4772-821e-36d55d9b7872.c000.snappy.parquet");
 
-        List<AddFileEntry> activeDataFiles = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
-
-        Set<String> dataFiles = ImmutableSet.of(
-                "age=42/part-00000-b82d8859-84a0-4f05-872c-206b07dd54f0.c000.snappy.parquet",
-                "age=30/part-00000-72a56c23-01ba-483a-9062-dd0accc86599.c000.snappy.parquet",
-                "age=25/part-00000-609e34b1-5466-4dbc-a780-2708166e7adb.c000.snappy.parquet",
-                "age=30/part-00000-7e43a3c3-ea26-4ae7-8eac-8f60cbb4df03.c000.snappy.parquet",
-                "age=21/part-00000-3d546786-bedc-407f-b9f7-e97aa12cce0f.c000.snappy.parquet",
-                "age=21/part-00001-290f0f26-19cf-4772-821e-36d55d9b7872.c000.snappy.parquet");
-
-        assertEqualsIgnoreOrder(activeDataFiles.stream().map(AddFileEntry::getPath).collect(Collectors.toSet()), dataFiles);
+            assertEqualsIgnoreOrder(activeDataFiles.map(AddFileEntry::getPath).collect(Collectors.toSet()), dataFiles);
+        }
 
         copyTransactionLogEntry(7, 9, resourceDir, transactionLogDir);
-        TableSnapshot updatedSnapshot = transactionLogAccess.loadSnapshot(new SchemaTableName("schema", tableName), new Path(tableDir.toURI()), SESSION);
-        activeDataFiles = transactionLogAccess.getActiveFiles(updatedSnapshot, SESSION);
+        TableSnapshot updatedSnapshot = transactionLogAccess.loadSnapshot(SESSION, new SchemaTableName("schema", tableName), tableDir.toURI().toString());
+        try (Stream<AddFileEntry> activeDataFiles = transactionLogAccess.getActiveFiles(updatedSnapshot, metadataEntry, protocolEntry, SESSION)) {
+            Set<String> dataFiles = ImmutableSet.of(
+                    "age=21/part-00000-3d546786-bedc-407f-b9f7-e97aa12cce0f.c000.snappy.parquet",
+                    "age=21/part-00001-290f0f26-19cf-4772-821e-36d55d9b7872.c000.snappy.parquet",
+                    "age=30/part-00000-63c2205d-84a3-4a66-bd7c-f69f5af55bbc.c000.snappy.parquet",
+                    "age=25/part-00001-aceaf062-1cd1-45cb-8f83-277ffebe995c.c000.snappy.parquet",
+                    "age=30/part-00002-5800be2e-2373-47d8-8b86-776a8ea9d69f.c000.snappy.parquet",
+                    "age=42/part-00003-0f53cae3-3e34-4876-b651-e1db9584dbc3.c000.snappy.parquet",
+                    "age=25/part-00000-b7fbbe31-c7f9-44ed-8757-5c47d10c3e81.c000.snappy.parquet");
 
-        dataFiles = ImmutableSet.of(
-                "age=21/part-00000-3d546786-bedc-407f-b9f7-e97aa12cce0f.c000.snappy.parquet",
-                "age=21/part-00001-290f0f26-19cf-4772-821e-36d55d9b7872.c000.snappy.parquet",
-                "age=30/part-00000-63c2205d-84a3-4a66-bd7c-f69f5af55bbc.c000.snappy.parquet",
-                "age=25/part-00001-aceaf062-1cd1-45cb-8f83-277ffebe995c.c000.snappy.parquet",
-                "age=30/part-00002-5800be2e-2373-47d8-8b86-776a8ea9d69f.c000.snappy.parquet",
-                "age=42/part-00003-0f53cae3-3e34-4876-b651-e1db9584dbc3.c000.snappy.parquet",
-                "age=25/part-00000-b7fbbe31-c7f9-44ed-8757-5c47d10c3e81.c000.snappy.parquet");
-
-        assertEqualsIgnoreOrder(activeDataFiles.stream().map(AddFileEntry::getPath).collect(Collectors.toSet()), dataFiles);
+            assertEqualsIgnoreOrder(activeDataFiles.map(AddFileEntry::getPath).collect(Collectors.toSet()), dataFiles);
+        }
     }
 
     @Test
@@ -477,58 +537,61 @@ public class TestTransactionLogAccess
         File transactionLogDir = new File(tableDir, TRANSACTION_LOG_DIRECTORY);
         transactionLogDir.mkdirs();
 
-        File resourceDir = new File(getClass().getClassLoader().getResource("databricks/person/_delta_log").toURI());
+        File resourceDir = new File(getClass().getClassLoader().getResource("databricks73/person/_delta_log").toURI());
         copyTransactionLogEntry(0, 8, resourceDir, transactionLogDir);
-        setupTransactionLogAccess(tableName, new Path(tableDir.toURI()));
+        setupTransactionLogAccess(tableName, tableDir.toURI().toString());
 
-        List<AddFileEntry> activeDataFiles = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
+        MetadataEntry metadataEntry = transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION);
+        ProtocolEntry protocolEntry = transactionLogAccess.getProtocolEntry(SESSION, tableSnapshot);
+        try (Stream<AddFileEntry> activeDataFiles = transactionLogAccess.getActiveFiles(tableSnapshot, metadataEntry, protocolEntry, SESSION)) {
+            Set<String> dataFiles = ImmutableSet.of(
+                    "age=21/part-00000-3d546786-bedc-407f-b9f7-e97aa12cce0f.c000.snappy.parquet",
+                    "age=21/part-00001-290f0f26-19cf-4772-821e-36d55d9b7872.c000.snappy.parquet",
+                    "age=30/part-00000-63c2205d-84a3-4a66-bd7c-f69f5af55bbc.c000.snappy.parquet",
+                    "age=25/part-00001-aceaf062-1cd1-45cb-8f83-277ffebe995c.c000.snappy.parquet",
+                    "age=30/part-00002-5800be2e-2373-47d8-8b86-776a8ea9d69f.c000.snappy.parquet",
+                    "age=42/part-00003-0f53cae3-3e34-4876-b651-e1db9584dbc3.c000.snappy.parquet");
 
-        Set<String> dataFiles = ImmutableSet.of(
-                "age=21/part-00000-3d546786-bedc-407f-b9f7-e97aa12cce0f.c000.snappy.parquet",
-                "age=21/part-00001-290f0f26-19cf-4772-821e-36d55d9b7872.c000.snappy.parquet",
-                "age=30/part-00000-63c2205d-84a3-4a66-bd7c-f69f5af55bbc.c000.snappy.parquet",
-                "age=25/part-00001-aceaf062-1cd1-45cb-8f83-277ffebe995c.c000.snappy.parquet",
-                "age=30/part-00002-5800be2e-2373-47d8-8b86-776a8ea9d69f.c000.snappy.parquet",
-                "age=42/part-00003-0f53cae3-3e34-4876-b651-e1db9584dbc3.c000.snappy.parquet");
-
-        assertEqualsIgnoreOrder(activeDataFiles.stream().map(AddFileEntry::getPath).collect(Collectors.toSet()), dataFiles);
+            assertEqualsIgnoreOrder(activeDataFiles.map(AddFileEntry::getPath).collect(Collectors.toSet()), dataFiles);
+        }
 
         copyTransactionLogEntry(8, 12, resourceDir, transactionLogDir);
         Files.copy(new File(resourceDir, LAST_CHECKPOINT_FILENAME).toPath(), new File(transactionLogDir, LAST_CHECKPOINT_FILENAME).toPath());
-        TableSnapshot updatedSnapshot = transactionLogAccess.loadSnapshot(new SchemaTableName("schema", tableName), new Path(tableDir.toURI()), SESSION);
-        activeDataFiles = transactionLogAccess.getActiveFiles(updatedSnapshot, SESSION);
+        TableSnapshot updatedSnapshot = transactionLogAccess.loadSnapshot(SESSION, new SchemaTableName("schema", tableName), tableDir.toURI().toString());
+        try (Stream<AddFileEntry> activeDataFiles = transactionLogAccess.getActiveFiles(updatedSnapshot, metadataEntry, protocolEntry, SESSION)) {
+            Set<String> dataFiles = ImmutableSet.of(
+                    "age=21/part-00000-3d546786-bedc-407f-b9f7-e97aa12cce0f.c000.snappy.parquet",
+                    "age=21/part-00001-290f0f26-19cf-4772-821e-36d55d9b7872.c000.snappy.parquet",
+                    "age=30/part-00000-63c2205d-84a3-4a66-bd7c-f69f5af55bbc.c000.snappy.parquet",
+                    "age=25/part-00001-aceaf062-1cd1-45cb-8f83-277ffebe995c.c000.snappy.parquet",
+                    "age=30/part-00002-5800be2e-2373-47d8-8b86-776a8ea9d69f.c000.snappy.parquet",
+                    "age=42/part-00003-0f53cae3-3e34-4876-b651-e1db9584dbc3.c000.snappy.parquet",
+                    "age=25/part-00000-b7fbbe31-c7f9-44ed-8757-5c47d10c3e81.c000.snappy.parquet",
+                    "age=25/part-00000-22a101a1-8f09-425e-847e-cbbe4f894eea.c000.snappy.parquet",
+                    "age=42/part-00000-b26c891a-7288-4d96-9d3b-bef648f12a34.c000.snappy.parquet",
+                    "age=30/part-00000-37ccfcd3-b44b-4d04-a1e6-d2837da75f7a.c000.snappy.parquet");
 
-        dataFiles = ImmutableSet.of(
-                "age=21/part-00000-3d546786-bedc-407f-b9f7-e97aa12cce0f.c000.snappy.parquet",
-                "age=21/part-00001-290f0f26-19cf-4772-821e-36d55d9b7872.c000.snappy.parquet",
-                "age=30/part-00000-63c2205d-84a3-4a66-bd7c-f69f5af55bbc.c000.snappy.parquet",
-                "age=25/part-00001-aceaf062-1cd1-45cb-8f83-277ffebe995c.c000.snappy.parquet",
-                "age=30/part-00002-5800be2e-2373-47d8-8b86-776a8ea9d69f.c000.snappy.parquet",
-                "age=42/part-00003-0f53cae3-3e34-4876-b651-e1db9584dbc3.c000.snappy.parquet",
-                "age=25/part-00000-b7fbbe31-c7f9-44ed-8757-5c47d10c3e81.c000.snappy.parquet",
-                "age=25/part-00000-22a101a1-8f09-425e-847e-cbbe4f894eea.c000.snappy.parquet",
-                "age=42/part-00000-b26c891a-7288-4d96-9d3b-bef648f12a34.c000.snappy.parquet",
-                "age=30/part-00000-37ccfcd3-b44b-4d04-a1e6-d2837da75f7a.c000.snappy.parquet");
-
-        assertEqualsIgnoreOrder(activeDataFiles.stream().map(AddFileEntry::getPath).collect(Collectors.toSet()), dataFiles);
+            assertEqualsIgnoreOrder(activeDataFiles.map(AddFileEntry::getPath).collect(Collectors.toSet()), dataFiles);
+        }
     }
 
     @Test
     public void testIncrementalCacheUpdates()
             throws Exception
     {
+        setupTransactionLogAccessFromResources("person", "databricks73/person");
+
         String tableName = "person";
         File tempDir = Files.createTempDirectory(null).toFile();
         File tableDir = new File(tempDir, tableName);
         File transactionLogDir = new File(tableDir, TRANSACTION_LOG_DIRECTORY);
         transactionLogDir.mkdirs();
 
-        File resourceDir = new File(getClass().getClassLoader().getResource("databricks/person/_delta_log").toURI());
+        File resourceDir = new File(getClass().getClassLoader().getResource("databricks73/person/_delta_log").toURI());
         copyTransactionLogEntry(0, 12, resourceDir, transactionLogDir);
         Files.copy(new File(resourceDir, LAST_CHECKPOINT_FILENAME).toPath(), new File(transactionLogDir, LAST_CHECKPOINT_FILENAME).toPath());
-
-        setupTransactionLogAccess(tableName, new Path(tableDir.toURI()));
-        List<AddFileEntry> activeDataFiles = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
+        MetadataEntry metadataEntry = transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION);
+        ProtocolEntry protocolEntry = transactionLogAccess.getProtocolEntry(SESSION, tableSnapshot);
 
         Set<String> originalDataFiles = ImmutableSet.of(
                 "age=42/part-00000-b26c891a-7288-4d96-9d3b-bef648f12a34.c000.snappy.parquet",
@@ -542,32 +605,38 @@ public class TestTransactionLogAccess
                 "age=21/part-00000-3d546786-bedc-407f-b9f7-e97aa12cce0f.c000.snappy.parquet",
                 "age=30/part-00000-37ccfcd3-b44b-4d04-a1e6-d2837da75f7a.c000.snappy.parquet");
 
-        assertEqualsIgnoreOrder(activeDataFiles.stream().map(AddFileEntry::getPath).collect(Collectors.toSet()), originalDataFiles);
-        assertThat(accessTrackingFileSystemFactory.getOpenCount()).containsExactlyInAnyOrderEntriesOf(
-                ImmutableMap.of(
-                        "_last_checkpoint", 1,
-                        "00000000000000000010.checkpoint.parquet", 2,
-                        // the file is accessed once when the transaction log tail is created
-                        // and then it tries to access the following file but that file does not
-                        // exist so it knows that it has reached the end of the tail
-                        "00000000000000000011.json", 1,
-                        "00000000000000000012.json", 1));
+        assertFileSystemAccesses(
+                () -> {
+                    setupTransactionLogAccess(tableName, tableDir.toURI().toString());
+                    try (Stream<AddFileEntry> activeDataFiles = transactionLogAccess.getActiveFiles(tableSnapshot, metadataEntry, protocolEntry, SESSION)) {
+                        assertEqualsIgnoreOrder(activeDataFiles.map(AddFileEntry::getPath).collect(Collectors.toSet()), originalDataFiles);
+                    }
+                },
+                ImmutableMultiset.<FileOperation>builder()
+                        .add(new FileOperation("_last_checkpoint", "InputFile.newStream"))
+                        .addCopies(new FileOperation("00000000000000000010.checkpoint.parquet", "InputFile.length"), 2) // TODO (https://github.com/trinodb/trino/issues/16775) why not e.g. once?
+                        .add(new FileOperation("00000000000000000010.checkpoint.parquet", "InputFile.newInput"))
+                        .add(new FileOperation("00000000000000000011.json", "InputFile.newStream"))
+                        .add(new FileOperation("00000000000000000012.json", "InputFile.newStream"))
+                        .build());
 
         copyTransactionLogEntry(12, 14, resourceDir, transactionLogDir);
         Set<String> newDataFiles = ImmutableSet.of(
                 "age=28/part-00000-40dd1707-1d42-4328-a59a-21f5c945fe60.c000.snappy.parquet",
                 "age=29/part-00000-3794c463-cb0c-4beb-8d07-7cc1e3b5920f.c000.snappy.parquet");
-        TableSnapshot updatedTableSnapshot = transactionLogAccess.loadSnapshot(new SchemaTableName("schema", tableName), new Path(tableDir.toURI()), SESSION);
-        activeDataFiles = transactionLogAccess.getActiveFiles(updatedTableSnapshot, SESSION);
-        assertEqualsIgnoreOrder(activeDataFiles.stream().map(AddFileEntry::getPath).collect(Collectors.toSet()), union(originalDataFiles, newDataFiles));
-        assertThat(accessTrackingFileSystemFactory.getOpenCount()).containsExactlyInAnyOrderEntriesOf(
-                ImmutableMap.of(
-                        "_last_checkpoint", 2,
-                        "00000000000000000010.checkpoint.parquet", 2,
-                        "00000000000000000011.json", 1,
-                        "00000000000000000012.json", 3,
-                        "00000000000000000013.json", 2,
-                        "00000000000000000014.json", 1));
+        assertFileSystemAccesses(
+                () -> {
+                    TableSnapshot updatedTableSnapshot = transactionLogAccess.loadSnapshot(SESSION, new SchemaTableName("schema", tableName), tableDir.toURI().toString());
+                    try (Stream<AddFileEntry> activeDataFiles = transactionLogAccess.getActiveFiles(updatedTableSnapshot, metadataEntry, protocolEntry, SESSION)) {
+                        assertEqualsIgnoreOrder(activeDataFiles.map(AddFileEntry::getPath).collect(Collectors.toSet()), union(originalDataFiles, newDataFiles));
+                    }
+                },
+                ImmutableMultiset.<FileOperation>builder()
+                        .add(new FileOperation("_last_checkpoint", "InputFile.newStream"))
+                        .addCopies(new FileOperation("00000000000000000012.json", "InputFile.newStream"), 2)
+                        .addCopies(new FileOperation("00000000000000000013.json", "InputFile.newStream"), 2)
+                        .add(new FileOperation("00000000000000000014.json", "InputFile.newStream"))
+                        .build());
     }
 
     @Test
@@ -580,47 +649,58 @@ public class TestTransactionLogAccess
         File transactionLogDir = new File(tableDir, TRANSACTION_LOG_DIRECTORY);
         transactionLogDir.mkdirs();
 
-        File resourceDir = new File(getClass().getClassLoader().getResource("databricks/person/_delta_log").toURI());
+        File resourceDir = new File(getClass().getClassLoader().getResource("databricks73/person/_delta_log").toURI());
         copyTransactionLogEntry(0, 12, resourceDir, transactionLogDir);
         Files.copy(new File(resourceDir, LAST_CHECKPOINT_FILENAME).toPath(), new File(transactionLogDir, LAST_CHECKPOINT_FILENAME).toPath());
 
-        setupTransactionLogAccess(tableName, new Path(tableDir.toURI()));
-        List<AddFileEntry> expectedDataFiles = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
+        setupTransactionLogAccess(tableName, tableDir.toURI().toString());
+        MetadataEntry metadataEntry = transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION);
+        ProtocolEntry protocolEntry = transactionLogAccess.getProtocolEntry(SESSION, tableSnapshot);
+        List<AddFileEntry> expectedDataFiles;
+        try (Stream<AddFileEntry> addFileEntryStream = transactionLogAccess.getActiveFiles(tableSnapshot, metadataEntry, protocolEntry, SESSION)) {
+            expectedDataFiles = addFileEntryStream.collect(toImmutableList());
+        }
 
         copyTransactionLogEntry(12, 14, resourceDir, transactionLogDir);
         Set<String> newDataFiles = ImmutableSet.of(
                 "age=28/part-00000-40dd1707-1d42-4328-a59a-21f5c945fe60.c000.snappy.parquet",
                 "age=29/part-00000-3794c463-cb0c-4beb-8d07-7cc1e3b5920f.c000.snappy.parquet");
-        TableSnapshot updatedTableSnapshot = transactionLogAccess.loadSnapshot(new SchemaTableName("schema", tableName), new Path(tableDir.toURI()), SESSION);
-        List<AddFileEntry> allDataFiles = transactionLogAccess.getActiveFiles(updatedTableSnapshot, SESSION);
-        List<AddFileEntry> dataFilesWithFixedVersion = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
+        TableSnapshot updatedTableSnapshot = transactionLogAccess.loadSnapshot(SESSION, new SchemaTableName("schema", tableName), tableDir.toURI().toString());
+        List<AddFileEntry> allDataFiles;
+        try (Stream<AddFileEntry> addFileEntryStream = transactionLogAccess.getActiveFiles(updatedTableSnapshot, metadataEntry, protocolEntry, SESSION)) {
+            allDataFiles = addFileEntryStream.collect(toImmutableList());
+        }
+        List<AddFileEntry> dataFilesWithFixedVersion;
+        try (Stream<AddFileEntry> addFileEntryStream = transactionLogAccess.getActiveFiles(tableSnapshot, metadataEntry, protocolEntry, SESSION)) {
+            dataFilesWithFixedVersion = addFileEntryStream.collect(toImmutableList());
+        }
         for (String newFilePath : newDataFiles) {
-            assertTrue(allDataFiles.stream().anyMatch(entry -> entry.getPath().equals(newFilePath)));
-            assertTrue(dataFilesWithFixedVersion.stream().noneMatch(entry -> entry.getPath().equals(newFilePath)));
+            assertThat(allDataFiles.stream().anyMatch(entry -> entry.getPath().equals(newFilePath))).isTrue();
+            assertThat(dataFilesWithFixedVersion.stream().noneMatch(entry -> entry.getPath().equals(newFilePath))).isTrue();
         }
 
-        assertEquals(expectedDataFiles.size(), dataFilesWithFixedVersion.size());
-        List<ColumnMetadata> columns = extractColumnMetadata(transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION).get(), TESTING_TYPE_MANAGER);
+        assertThat(expectedDataFiles.size()).isEqualTo(dataFilesWithFixedVersion.size());
+        List<ColumnMetadata> columns = extractColumnMetadata(transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION), transactionLogAccess.getProtocolEntry(SESSION, tableSnapshot), TESTING_TYPE_MANAGER);
         for (int i = 0; i < expectedDataFiles.size(); i++) {
             AddFileEntry expected = expectedDataFiles.get(i);
             AddFileEntry actual = dataFilesWithFixedVersion.get(i);
 
-            assertEquals(expected.getPath(), actual.getPath());
-            assertEquals(expected.getPartitionValues(), actual.getPartitionValues());
-            assertEquals(expected.getSize(), actual.getSize());
-            assertEquals(expected.getModificationTime(), actual.getModificationTime());
-            assertEquals(expected.isDataChange(), actual.isDataChange());
-            assertEquals(expected.getTags(), actual.getTags());
+            assertThat(expected.getPath()).isEqualTo(actual.getPath());
+            assertThat(expected.getPartitionValues()).isEqualTo(actual.getPartitionValues());
+            assertThat(expected.getSize()).isEqualTo(actual.getSize());
+            assertThat(expected.getModificationTime()).isEqualTo(actual.getModificationTime());
+            assertThat(expected.isDataChange()).isEqualTo(actual.isDataChange());
+            assertThat(expected.getTags()).isEqualTo(actual.getTags());
 
-            assertTrue(expected.getStats().isPresent());
-            assertTrue(actual.getStats().isPresent());
+            assertThat(expected.getStats().isPresent()).isTrue();
+            assertThat(actual.getStats().isPresent()).isTrue();
 
             for (ColumnMetadata column : columns) {
-                DeltaLakeColumnHandle columnHandle = new DeltaLakeColumnHandle(column.getName(), column.getType(), OptionalInt.empty(), column.getName(), column.getType(), REGULAR);
-                assertEquals(expected.getStats().get().getMinColumnValue(columnHandle), actual.getStats().get().getMinColumnValue(columnHandle));
-                assertEquals(expected.getStats().get().getMaxColumnValue(columnHandle), actual.getStats().get().getMaxColumnValue(columnHandle));
-                assertEquals(expected.getStats().get().getNullCount(columnHandle.getName()), actual.getStats().get().getNullCount(columnHandle.getName()));
-                assertEquals(expected.getStats().get().getNumRecords(), actual.getStats().get().getNumRecords());
+                DeltaLakeColumnHandle columnHandle = new DeltaLakeColumnHandle(column.getName(), column.getType(), OptionalInt.empty(), column.getName(), column.getType(), REGULAR, Optional.empty());
+                assertThat(expected.getStats().get().getMinColumnValue(columnHandle)).isEqualTo(actual.getStats().get().getMinColumnValue(columnHandle));
+                assertThat(expected.getStats().get().getMaxColumnValue(columnHandle)).isEqualTo(actual.getStats().get().getMaxColumnValue(columnHandle));
+                assertThat(expected.getStats().get().getNullCount(columnHandle.getBaseColumnName())).isEqualTo(actual.getStats().get().getNullCount(columnHandle.getBaseColumnName()));
+                assertThat(expected.getStats().get().getNumRecords()).isEqualTo(actual.getStats().get().getNumRecords());
             }
         }
     }
@@ -635,22 +715,22 @@ public class TestTransactionLogAccess
         File transactionLogDir = new File(tableDir, TRANSACTION_LOG_DIRECTORY);
         transactionLogDir.mkdirs();
 
-        Path tableLocation = new Path(tableDir.toURI());
+        String tableLocation = tableDir.toURI().toString();
         SchemaTableName schemaTableName = new SchemaTableName("schema", tableName);
 
-        File resourceDir = new File(getClass().getClassLoader().getResource("databricks/person/_delta_log").toURI());
+        File resourceDir = new File(getClass().getClassLoader().getResource("databricks73/person/_delta_log").toURI());
         copyTransactionLogEntry(0, 1, resourceDir, transactionLogDir);
 
         setupTransactionLogAccess(tableName, tableLocation);
-        assertEquals(tableSnapshot.getVersion(), 0L);
+        assertThat(tableSnapshot.getVersion()).isEqualTo(0L);
 
         copyTransactionLogEntry(1, 2, resourceDir, transactionLogDir);
-        TableSnapshot firstUpdate = transactionLogAccess.loadSnapshot(schemaTableName, tableLocation, SESSION);
-        assertEquals(firstUpdate.getVersion(), 1L);
+        TableSnapshot firstUpdate = transactionLogAccess.loadSnapshot(SESSION, schemaTableName, tableLocation);
+        assertThat(firstUpdate.getVersion()).isEqualTo(1L);
 
         copyTransactionLogEntry(2, 3, resourceDir, transactionLogDir);
-        TableSnapshot secondUpdate = transactionLogAccess.loadSnapshot(schemaTableName, tableLocation, SESSION);
-        assertEquals(secondUpdate.getVersion(), 2L);
+        TableSnapshot secondUpdate = transactionLogAccess.loadSnapshot(SESSION, schemaTableName, tableLocation);
+        assertThat(secondUpdate.getVersion()).isEqualTo(2L);
     }
 
     @Test
@@ -659,9 +739,14 @@ public class TestTransactionLogAccess
     {
         // See README.md for table contents
         String tableName = "parquet_struct_statistics";
-        setupTransactionLogAccess(tableName, new Path(getClass().getClassLoader().getResource("databricks/pruning/" + tableName).toURI()));
+        setupTransactionLogAccess(tableName, getClass().getClassLoader().getResource("databricks73/pruning/" + tableName).toURI().toString());
 
-        List<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
+        MetadataEntry metadataEntry = transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION);
+        ProtocolEntry protocolEntry = transactionLogAccess.getProtocolEntry(SESSION, tableSnapshot);
+        List<AddFileEntry> addFileEntries;
+        try (Stream<AddFileEntry> addFileEntryStream = transactionLogAccess.getActiveFiles(tableSnapshot, metadataEntry, protocolEntry, SESSION)) {
+            addFileEntries = addFileEntryStream.collect(toImmutableList());
+        }
 
         AddFileEntry addFileEntry = addFileEntries.stream()
                 .filter(entry -> entry.getPath().equalsIgnoreCase("part-00000-0e22455f-5650-442f-a094-e1a8b7ed2271-c000.snappy.parquet"))
@@ -688,13 +773,9 @@ public class TestTransactionLogAccess
         for (String columnName : statsValues.keySet()) {
             // Types would need to be specified properly if stats were being read from JSON but are not can be ignored when reading parsed stats from parquet,
             // so it is safe to use INTEGER as a placeholder
-            assertEquals(
-                    fileStats.getMinColumnValue(new DeltaLakeColumnHandle(columnName, IntegerType.INTEGER, OptionalInt.empty(), columnName, IntegerType.INTEGER, REGULAR)),
-                    Optional.of(statsValues.get(columnName)));
+            assertThat(fileStats.getMinColumnValue(new DeltaLakeColumnHandle(columnName, IntegerType.INTEGER, OptionalInt.empty(), columnName, IntegerType.INTEGER, REGULAR, Optional.empty()))).isEqualTo(Optional.of(statsValues.get(columnName)));
 
-            assertEquals(
-                    fileStats.getMaxColumnValue(new DeltaLakeColumnHandle(columnName, IntegerType.INTEGER, OptionalInt.empty(), columnName, IntegerType.INTEGER, REGULAR)),
-                    Optional.of(statsValues.get(columnName)));
+            assertThat(fileStats.getMaxColumnValue(new DeltaLakeColumnHandle(columnName, IntegerType.INTEGER, OptionalInt.empty(), columnName, IntegerType.INTEGER, REGULAR, Optional.empty()))).isEqualTo(Optional.of(statsValues.get(columnName)));
         }
     }
 
@@ -703,97 +784,168 @@ public class TestTransactionLogAccess
             throws Exception
     {
         String tableName = "person";
-        Path tableDir = new Path(getClass().getClassLoader().getResource("databricks/" + tableName).toURI());
+        String tableDir = getClass().getClassLoader().getResource("databricks73/" + tableName).toURI().toString();
         DeltaLakeConfig cacheDisabledConfig = new DeltaLakeConfig();
         cacheDisabledConfig.setMetadataCacheTtl(new Duration(0, TimeUnit.SECONDS));
-        setupTransactionLogAccess(tableName, tableDir, cacheDisabledConfig);
 
-        assertThat(accessTrackingFileSystemFactory.getOpenCount()).containsExactlyInAnyOrderEntriesOf(
-                ImmutableMap.of(
-                        "_last_checkpoint", 1,
-                        "00000000000000000011.json", 1,
-                        "00000000000000000012.json", 1,
-                        "00000000000000000013.json", 1,
-                        "00000000000000000014.json", 1));
+        assertFileSystemAccesses(
+                () -> {
+                    setupTransactionLogAccess(tableName, tableDir, cacheDisabledConfig);
+                },
+                ImmutableMultiset.<FileOperation>builder()
+                        .add(new FileOperation("_last_checkpoint", "InputFile.newStream"))
+                        .add(new FileOperation("00000000000000000011.json", "InputFile.newStream"))
+                        .add(new FileOperation("00000000000000000012.json", "InputFile.newStream"))
+                        .add(new FileOperation("00000000000000000013.json", "InputFile.newStream"))
+                        .add(new FileOperation("00000000000000000014.json", "InputFile.newStream"))
+                        .build());
 
         // With the transaction log cache disabled, when loading the snapshot again, all the needed files will be opened again
-        transactionLogAccess.loadSnapshot(new SchemaTableName("schema", tableName), tableDir, SESSION);
-        assertThat(accessTrackingFileSystemFactory.getOpenCount()).containsExactlyInAnyOrderEntriesOf(
-                ImmutableMap.of(
-                        "_last_checkpoint", 2,
-                        "00000000000000000011.json", 2,
-                        "00000000000000000012.json", 2,
-                        "00000000000000000013.json", 2,
-                        "00000000000000000014.json", 2));
+        assertFileSystemAccesses(
+                () -> {
+                    transactionLogAccess.loadSnapshot(SESSION, new SchemaTableName("schema", tableName), tableDir);
+                },
+                ImmutableMultiset.<FileOperation>builder()
+                        .add(new FileOperation("_last_checkpoint", "InputFile.newStream"))
+                        .add(new FileOperation("00000000000000000011.json", "InputFile.newStream"))
+                        .add(new FileOperation("00000000000000000012.json", "InputFile.newStream"))
+                        .add(new FileOperation("00000000000000000013.json", "InputFile.newStream"))
+                        .add(new FileOperation("00000000000000000014.json", "InputFile.newStream"))
+                        .build());
     }
 
     @Test
     public void testTableSnapshotsActiveDataFilesCache()
             throws Exception
     {
+        setupTransactionLogAccessFromResources("person", "databricks73/person");
+
         String tableName = "person";
-        Path tableDir = new Path(getClass().getClassLoader().getResource("databricks/" + tableName).toURI());
+        String tableDir = getClass().getClassLoader().getResource("databricks73/" + tableName).toURI().toString();
         DeltaLakeConfig shortLivedActiveDataFilesCacheConfig = new DeltaLakeConfig();
         shortLivedActiveDataFilesCacheConfig.setDataFileCacheTtl(new Duration(10, TimeUnit.MINUTES));
-        setupTransactionLogAccess(tableName, tableDir, shortLivedActiveDataFilesCacheConfig);
+        MetadataEntry metadataEntry = transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION);
+        ProtocolEntry protocolEntry = transactionLogAccess.getProtocolEntry(SESSION, tableSnapshot);
 
-        List<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
-        assertEquals(addFileEntries.size(), 12);
-        assertThat(accessTrackingFileSystemFactory.getOpenCount()).containsExactlyInAnyOrderEntriesOf(
-                ImmutableMap.of(
-                        "_last_checkpoint", 1,
-                        "00000000000000000011.json", 1,
-                        "00000000000000000012.json", 1,
-                        "00000000000000000013.json", 1,
-                        "00000000000000000014.json", 1,
-                        "00000000000000000010.checkpoint.parquet", 2));
+        assertFileSystemAccesses(
+                () -> {
+                    setupTransactionLogAccess(tableName, tableDir, shortLivedActiveDataFilesCacheConfig);
+                    try (Stream<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, metadataEntry, protocolEntry, SESSION)) {
+                        assertThat(addFileEntries.count()).isEqualTo(12L);
+                    }
+                },
+                ImmutableMultiset.<FileOperation>builder()
+                        .add(new FileOperation("_last_checkpoint", "InputFile.newStream"))
+                        .add(new FileOperation("00000000000000000011.json", "InputFile.newStream"))
+                        .add(new FileOperation("00000000000000000012.json", "InputFile.newStream"))
+                        .add(new FileOperation("00000000000000000013.json", "InputFile.newStream"))
+                        .add(new FileOperation("00000000000000000014.json", "InputFile.newStream"))
+                        .addCopies(new FileOperation("00000000000000000010.checkpoint.parquet", "InputFile.length"), 2) // TODO (https://github.com/trinodb/trino/issues/16775) why not e.g. once?
+                        .add(new FileOperation("00000000000000000010.checkpoint.parquet", "InputFile.newInput"))
+                        .build());
 
-        addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
-        assertEquals(addFileEntries.size(), 12);
         // The internal data cache should still contain the data files for the table
-        assertThat(accessTrackingFileSystemFactory.getOpenCount()).containsExactlyInAnyOrderEntriesOf(
-                ImmutableMap.of(
-                        "_last_checkpoint", 1,
-                        "00000000000000000011.json", 1,
-                        "00000000000000000012.json", 1,
-                        "00000000000000000013.json", 1,
-                        "00000000000000000014.json", 1,
-                        "00000000000000000010.checkpoint.parquet", 2));
+        assertFileSystemAccesses(
+                () -> {
+                    try (Stream<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, metadataEntry, protocolEntry, SESSION)) {
+                        assertThat(addFileEntries.count()).isEqualTo(12L);
+                    }
+                },
+                ImmutableMultiset.of());
+    }
+
+    @Test
+    public void testFlushSnapshotAndActiveFileCache()
+            throws Exception
+    {
+        setupTransactionLogAccessFromResources("person", "databricks73/person");
+
+        String tableName = "person";
+        String tableDir = getClass().getClassLoader().getResource("databricks73/" + tableName).toURI().toString();
+        DeltaLakeConfig shortLivedActiveDataFilesCacheConfig = new DeltaLakeConfig();
+        shortLivedActiveDataFilesCacheConfig.setDataFileCacheTtl(new Duration(10, TimeUnit.MINUTES));
+        MetadataEntry metadataEntry = transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION);
+        ProtocolEntry protocolEntry = transactionLogAccess.getProtocolEntry(SESSION, tableSnapshot);
+
+        assertFileSystemAccesses(
+                () -> {
+                    setupTransactionLogAccess(tableName, tableDir, shortLivedActiveDataFilesCacheConfig);
+                    try (Stream<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, metadataEntry, protocolEntry, SESSION)) {
+                        assertThat(addFileEntries.count()).isEqualTo(12L);
+                    }
+                },
+                ImmutableMultiset.<FileOperation>builder()
+                        .add(new FileOperation("_last_checkpoint", "InputFile.newStream"))
+                        .add(new FileOperation("00000000000000000011.json", "InputFile.newStream"))
+                        .add(new FileOperation("00000000000000000012.json", "InputFile.newStream"))
+                        .add(new FileOperation("00000000000000000013.json", "InputFile.newStream"))
+                        .add(new FileOperation("00000000000000000014.json", "InputFile.newStream"))
+                        .addCopies(new FileOperation("00000000000000000010.checkpoint.parquet", "InputFile.length"), 2) // TODO (https://github.com/trinodb/trino/issues/16775) why not e.g. once?
+                        .add(new FileOperation("00000000000000000010.checkpoint.parquet", "InputFile.newInput"))
+                        .build());
+
+        // Flush all cache and then load snapshot and get active files
+        transactionLogAccess.flushCache();
+        assertFileSystemAccesses(
+                () -> {
+                    transactionLogAccess.loadSnapshot(SESSION, new SchemaTableName("schema", tableName), tableDir);
+                    try (Stream<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, metadataEntry, protocolEntry, SESSION)) {
+                        assertThat(addFileEntries.count()).isEqualTo(12L);
+                    }
+                },
+                ImmutableMultiset.<FileOperation>builder()
+                        .add(new FileOperation("_last_checkpoint", "InputFile.newStream"))
+                        .add(new FileOperation("00000000000000000011.json", "InputFile.newStream"))
+                        .add(new FileOperation("00000000000000000012.json", "InputFile.newStream"))
+                        .add(new FileOperation("00000000000000000013.json", "InputFile.newStream"))
+                        .add(new FileOperation("00000000000000000014.json", "InputFile.newStream"))
+                        .addCopies(new FileOperation("00000000000000000010.checkpoint.parquet", "InputFile.length"), 2) // TODO (https://github.com/trinodb/trino/issues/16775) why not e.g. once?
+                        .add(new FileOperation("00000000000000000010.checkpoint.parquet", "InputFile.newInput"))
+                        .build());
     }
 
     @Test
     public void testTableSnapshotsActiveDataFilesCacheDisabled()
             throws Exception
     {
+        setupTransactionLogAccessFromResources("person", "databricks73/person");
+
         String tableName = "person";
-        Path tableDir = new Path(getClass().getClassLoader().getResource("databricks/" + tableName).toURI());
+        String tableDir = getClass().getClassLoader().getResource("databricks73/" + tableName).toURI().toString();
         DeltaLakeConfig shortLivedActiveDataFilesCacheConfig = new DeltaLakeConfig();
         shortLivedActiveDataFilesCacheConfig.setDataFileCacheTtl(new Duration(0, TimeUnit.SECONDS));
-        setupTransactionLogAccess(tableName, tableDir, shortLivedActiveDataFilesCacheConfig);
+        MetadataEntry metadataEntry = transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION);
+        ProtocolEntry protocolEntry = transactionLogAccess.getProtocolEntry(SESSION, tableSnapshot);
 
-        List<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
-        assertEquals(addFileEntries.size(), 12);
-        assertThat(accessTrackingFileSystemFactory.getOpenCount()).containsExactlyInAnyOrderEntriesOf(
-                ImmutableMap.of(
-                        "_last_checkpoint", 1,
-                        "00000000000000000011.json", 1,
-                        "00000000000000000012.json", 1,
-                        "00000000000000000013.json", 1,
-                        "00000000000000000014.json", 1,
-                        "00000000000000000010.checkpoint.parquet", 2));
+        assertFileSystemAccesses(
+                () -> {
+                    setupTransactionLogAccess(tableName, tableDir, shortLivedActiveDataFilesCacheConfig);
+                    try (Stream<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, metadataEntry, protocolEntry, SESSION)) {
+                        assertThat(addFileEntries.count()).isEqualTo(12L);
+                    }
+                },
+                ImmutableMultiset.<FileOperation>builder()
+                        .add(new FileOperation("_last_checkpoint", "InputFile.newStream"))
+                        .add(new FileOperation("00000000000000000011.json", "InputFile.newStream"))
+                        .add(new FileOperation("00000000000000000012.json", "InputFile.newStream"))
+                        .add(new FileOperation("00000000000000000013.json", "InputFile.newStream"))
+                        .add(new FileOperation("00000000000000000014.json", "InputFile.newStream"))
+                        .addCopies(new FileOperation("00000000000000000010.checkpoint.parquet", "InputFile.length"), 2) // TODO (https://github.com/trinodb/trino/issues/16775) why not e.g. once?
+                        .add(new FileOperation("00000000000000000010.checkpoint.parquet", "InputFile.newInput"))
+                        .build());
 
         // With no caching for the transaction log entries, when loading the snapshot again,
         // the checkpoint file will be read again
-        addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
-        assertEquals(addFileEntries.size(), 12);
-        assertThat(accessTrackingFileSystemFactory.getOpenCount()).containsExactlyInAnyOrderEntriesOf(
-                ImmutableMap.of(
-                        "_last_checkpoint", 1,
-                        "00000000000000000011.json", 1,
-                        "00000000000000000012.json", 1,
-                        "00000000000000000013.json", 1,
-                        "00000000000000000014.json", 1,
-                        "00000000000000000010.checkpoint.parquet", 4));
+        assertFileSystemAccesses(
+                () -> {
+                    try (Stream<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, metadataEntry, protocolEntry, SESSION)) {
+                        assertThat(addFileEntries.count()).isEqualTo(12L);
+                    }
+                },
+                ImmutableMultiset.<FileOperation>builder()
+                        .addCopies(new FileOperation("00000000000000000010.checkpoint.parquet", "InputFile.length"), 2) // TODO (https://github.com/trinodb/trino/issues/16775) why not e.g. once?
+                        .add(new FileOperation("00000000000000000010.checkpoint.parquet", "InputFile.newInput"))
+                        .build());
     }
 
     private void copyTransactionLogEntry(int startVersion, int endVersion, File sourceDir, File targetDir)
@@ -806,6 +958,30 @@ public class TestTransactionLogAccess
             }
             String lastTransactionName = format("%020d.json", i);
             Files.copy(new File(sourceDir, lastTransactionName).toPath(), new File(targetDir, lastTransactionName).toPath());
+        }
+    }
+
+    private void assertFileSystemAccesses(TestingTelemetry.CheckedRunnable<?> callback, Multiset<FileOperation> expectedAccesses)
+            throws Exception
+    {
+        List<SpanData> spanData = testingTelemetry.captureSpans(callback::run);
+        assertMultisetsEqual(getOperations(spanData), expectedAccesses);
+    }
+
+    private Multiset<FileOperation> getOperations(List<SpanData> spans)
+    {
+        return spans.stream()
+                .filter(span -> span.getName().startsWith("InputFile."))
+                .map(span -> new FileOperation(span.getAttributes().get(FILE_LOCATION).replaceFirst(".*/_delta_log/", ""), span.getName()))
+                .collect(toCollection(HashMultiset::create));
+    }
+
+    private record FileOperation(String path, String operationType)
+    {
+        FileOperation
+        {
+            requireNonNull(path, "path is null");
+            requireNonNull(operationType, "operationType is null");
         }
     }
 }
